2006-06-19  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmsetup.c: Fix bug that causes gdmsetup to not fail properly
          when there is no custom config file.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_session.c, gui/greeter/greeter_system.c:
	  Make sure focus is returned to entry after dialogs are launched
	  from the options button.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* pixmaps/nobody.png: Updated so it uses official GNOME logo.
	  Fixes bug #343571.  Image provided by Diana Fong
	  <dfong@redhat.com>.

2006-06-16  Brian Cameron  <brian.cameron@sun.com>

	* pixmaps/nohost.png: Updated so it uses official GNOME logo.
	  Fixes bug #343571.  Image provided by Diana Fong
	  <dfong@redhat.com>.

2006-06-12  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.9: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-06-09  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: Fix autologin Pam service name.  Fixes bug
	  #344191.
	* daemon/gdmconfig.c, gui/gdmconfig.c, gui/gdmdynamic.c, 
	  gui/gdmsetup.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_canvas_item.c, gui/greeter/greeter_geometry.c
	  gui/greeter/greeter_item_pam.c, gui/greeter/greeter_parser.c,
	  gui/greeter/greeter_system.c, utils/prefetch.c: Fix warnings.

2006-06-07  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.8: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.

2006-06-06  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmflexiserver.c:  Call gdmcomm_check with FALSE so that ti
          doesn't try to pop-up a GUI.  Sometimes gdmflexiserver is called
          by processes that do not have access to the display so this causes
          a crash, and gdmflexiserver prints out errors anyway.
        * gui/modules/AccessDwellMouseEvents.in: Added gestures so you can