@@ -1,3 +1,9 @@
+2006-06-25  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/gdm.c: Fix decoding of suspend message in the daemon
+	  so the suspend command works.  Fixes bug #345829.  Patch
+	  provided by Philippe Troin <phil@fifi.org>.
+
 2006-06-19  Brian Cameron  <brian.cameron@sun.com>
 
         * gui/gdmsetup.c: Fix bug that causes gdmsetup to not fail properly
